# gradescope-mcp

./: .env.example  .gitignore  AGENT.md  DEVLOG.md  LICENSE  README.md  pyproject.toml
skills/gradescope-assisted-grading/: SKILL.md
src/gradescope_mcp/: __init__.py  __main__.py  auth.py  cache.py  server.py
src/gradescope_mcp/tools/: __init__.py  answer_groups.py  assignments.py  courses.py  extensions.py  grading.py  grading_ops.py  grading_workflow.py  regrades.py  safety.py  statistics.py  submissions.py
tests/: test_answer_groups.py  test_assignments_and_grading_ops.py  test_extensions_and_answer_key.py  test_grading_workflow.py  test_write_safety.py
